# vsdx-shrinker

./: .gitignore  README.md  pyproject.toml
src/vsdx_shrinker/: __init__.py  cli.py  core.py
tests/: test_edge_cases.py
