[project]
name = "vsdx-shrinker"
version = "0.1.0"
description = "Remove unused master shapes from Visio (.vsdx) files to dramatically reduce file size"
authors = [{name = "cognitohazard"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
vsdx-shrinker = "vsdx_shrinker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vsdx_shrinker"]
